--- a/static/covid.css
+++ b/static/covid.css
@@ -29,7 +29,7 @@ body{
 	text-align: left;
 	padding-top: 1%;
 	padding-bottom: 10%;
-	color: #E5E5E5;
+	color: #222931;
 	text-decoration-style: bold;
 
 }
