--- a/static/covid.css
+++ b/static/covid.css
@@ -2,26 +2,29 @@ html{
 	height: 100%;
 }
 body{
-	background:black;
+	background-image:linear-gradient(#41729F, white);
 	background-size: cover;
 	background-position: center;
 	font-family: Raleway;
 }
+
+
 .content {
 	text-align: center;
 	padding-top: 15%;
 	color: white;
-	height: 750px;
-	text-decoration-style: bold;
+	height: 700px;
+    text-decoration-style: bold;
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                  0px 8px 13px rgba(0,0,0,0.1),
                  0px 18px 23px rgba(0,0,0,0.1);
 }
 .content1{
-	text-align: left;
+	text-align: center;
 	padding-top: 1%;
 	padding-bottom: 5%;
 	color: #222931;
+	font-size: 1.25em;
 	text-decoration-style: bold;
 
 }
@@ -44,10 +47,12 @@ a{
 	color: #E5E5E5;
 }
 .theme1{
-	background: #E5E5E5;
+	background: white;
+	color: #222931;
 }
 .theme2{
-	background: #0C2D48;
+	background:#41729F;
+	color: #E5E5E5;
 }
 input[type=radio]{
   width: 15px;
